{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 11,
  "lineage": "33e41fe4-04b5-1949-9c09-fcc1dfe9db8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de47171bf453c3ae",
            "arn": "arn:aws:ec2:ap-south-1:533267299375:elastic-ip/eipalloc-0de47171bf453c3ae",
            "domain": "vpc",
            "id": "eipalloc-0de47171bf453c3ae",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-227-172.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.227.172",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533267299375:security-group/sg-0a4853d25aeb16652",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a4853d25aeb16652",
            "ingress": [],
            "name": "attribute-SG",
            "name_prefix": "",
            "owner_id": "533267299375",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-088693815cd5fe492"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533267299375:security-group-rule/sgr-0f671f4f29ba160b7",
            "cidr_ipv4": "15.207.227.172/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0f671f4f29ba160b7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a4853d25aeb16652",
            "security_group_rule_id": "sgr-0f671f4f29ba160b7",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}